# mediafire-cpp-sdk

./: Changelog.txt  MINGW.NOTES  README.md  doxygen.conf
Examples/app_constants/: CMakeLists.txt  application_key.cpp  application_key.hpp
src/mediafire_sdk/: CMakeLists.txt
src/mediafire_sdk/api/: CMakeLists.txt  GeneratedList.txt  api_base.hpp  api_interface.hpp  app_constants.cpp  app_constants.hpp  config.hpp  connection_state.cpp  connection_state.hpp  credentials.cpp  credentials.hpp  error.cpp  error.hpp  gen_api_template.py  ptree_helpers.cpp  ptree_helpers.hpp  request_interface.hpp  requester.hpp  requester_impl.hpp  response_base.cpp  response_base.hpp  session_maintainer.cpp  session_maintainer.hpp  session_maintainer_request.hpp  session_state.cpp  session_state.hpp  session_token_api_base.cpp  session_token_api_base.hpp  tokenless_api_base.cpp  tokenless_api_base.hpp  type_helpers.cpp  type_helpers.hpp  types.hpp
src/mediafire_sdk/api/actions/: clone_cloud_tree.hpp  clone_cloud_tree_impl.hpp  coroutine.hpp  create_folder.hpp  create_folder_impl.hpp  delete_file.hpp  delete_file_impl.hpp  delete_folder.hpp  delete_folder_impl.hpp  get_changes_device.hpp  get_changes_device_impl.hpp  get_folder_content.hpp  get_folder_contents.hpp  get_folder_contents_impl.hpp  get_foreign_changes_device.hpp  get_foreign_changes_device_impl.hpp  get_foreign_resources_device.hpp  get_foreign_resources_device_impl.hpp  get_info_file.hpp  get_info_file_impl.hpp  get_info_folder.hpp  get_info_folder_impl.hpp  move_file.hpp  move_file_impl.hpp  move_folder.hpp  move_folder_impl.hpp  poll_changes.hpp  poll_changes_impl.hpp  poll_foreign_changes.hpp  poll_foreign_changes_impl.hpp  rename_file.hpp  rename_file_impl.hpp  rename_folder.hpp  rename_folder_impl.hpp  work_manager.cpp  work_manager.hpp
src/mediafire_sdk/api/billing/: CMakeLists.txt  cancel_plan.cpp  cancel_plan.hpp  change_plan.cpp  change_plan.hpp  get_invoice.cpp  get_invoice.hpp  get_plans.cpp  get_plans.hpp  get_products.cpp  get_products.hpp  purchase_plan.cpp  purchase_plan.hpp
src/mediafire_sdk/api/contact/: CMakeLists.txt  add.cpp  add.hpp  fetch.hpp
src/mediafire_sdk/api/detail/: api_base.hpp  request_interface.hpp  requester_impl.hpp  session_maintainer_locker.cpp  session_maintainer_locker.hpp  session_maintainer_request.hpp  session_token_api_base_static.cpp  session_token_api_base_static.hpp  tokenless_api_base_static.cpp  tokenless_api_base_static.hpp
src/mediafire_sdk/api/device/: CMakeLists.txt  get_changes.cpp  get_changes.hpp  get_foreign_changes.hpp  get_foreign_resources.cpp  get_foreign_resources.hpp  get_patch.cpp  get_patch.hpp  get_resource_shares.cpp  get_resource_shares.hpp  get_status.cpp  get_status.hpp  get_updates.cpp  get_updates.hpp  get_user_shares.cpp  get_user_shares.hpp  share_resources.cpp  share_resources.hpp  unshare_resource.cpp  unshare_resource.hpp
src/mediafire_sdk/api/doc/: api.dox
src/mediafire_sdk/api/error/: CMakeLists.txt  api_category.cpp  api_category.hpp  api_condition.cpp  api_condition.hpp
src/mediafire_sdk/api/file/: CMakeLists.txt  configure_one_time_key.hpp  copy.cpp  copy.hpp  create.cpp  create.hpp  create_snapshot.hpp  file_delete.cpp  file_delete.hpp  get_info.cpp  get_info.hpp  get_links.cpp  get_links.hpp  get_versions.hpp  move.cpp  move.hpp  one_time_key.hpp  purge.hpp  recently_modified.hpp  restore.hpp  update.cpp  update.hpp  update_file.hpp
src/mediafire_sdk/api/folder/: CMakeLists.txt  copy.cpp  copy.hpp  create.cpp  create.hpp  folder_delete.cpp  folder_delete.hpp  get_content.cpp  get_content.hpp  get_info.cpp  get_info.hpp  move.cpp  move.hpp  update.cpp  update.hpp
src/mediafire_sdk/api/notifications/: CMakeLists.txt  get_cache.cpp  get_cache.hpp  peek_cache.cpp  peek_cache.hpp
src/mediafire_sdk/api/system/: CMakeLists.txt  get_editable_media.hpp  get_info.hpp  get_limits.cpp  get_limits.hpp  get_mime_types.hpp  get_status.cpp  get_status.hpp  get_supported_media.hpp  get_version.hpp
src/mediafire_sdk/api/templates/: all_hpp_template.hpp.txt  api_template.cpp.txt  api_template.hpp.txt  session_token_api.cpp.txt  session_token_api.hpp.txt
src/mediafire_sdk/api/unit_tests/: CMakeLists.txt  api_ut_helpers.cpp  api_ut_helpers.hpp  check_expected.sh  session_token_test.hpp  session_token_test_connection.cpp  session_token_test_connection.hpp  session_token_test_request.cpp  session_token_test_request.hpp  session_token_test_server.cpp  session_token_test_server.hpp  ut_api.cpp  (+27 more)
src/mediafire_sdk/doc/: mf.dox
src/mediafire_sdk/downloader/: CMakeLists.txt  acceptor_interface.hpp  callbacks.hpp  download.cpp  download.hpp  download_config.hpp  download_interface.hpp  download_status.hpp  error.hpp
src/mediafire_sdk/http/: CMakeLists.txt  bandwidth_analyser.cpp  bandwidth_analyser.hpp  bandwidth_analyser_interface.hpp  buffer_interface.hpp  default_http_headers.hpp  error.hpp  headers.hpp  http_config.cpp  http_config.hpp  http_request.cpp  http_request.hpp  http_request_events.hpp  http_request_state_machine.hpp  pem.hpp  post_data_pipe_interface.hpp  request_response_interface.hpp  shared_buffer.hpp  url.cpp  url.hpp
src/mediafire_sdk/uploader/: CMakeLists.txt  error.hpp  hasher.cpp  hasher.hpp  upload_manager.cpp  upload_manager.hpp  upload_modification.hpp  upload_request.cpp  upload_request.hpp  upload_status.hpp
src/mediafire_sdk/utils/: CMakeLists.txt  base64.cpp  base64.hpp  cancellable_interface.hpp  container_algorithms.hpp  di_debug_tmp.hpp  error.hpp  error_or.hpp  fileio.cpp  fileio.hpp  io_service_connection-inl.hpp  io_service_connection.cpp  io_service_connection.hpp  io_service_connection_helper.hpp  lambda_visitor.hpp  md5_hasher.cpp  md5_hasher.hpp  mutex.hpp  noexcept.hpp  pauseable_interface.hpp  sha1_hasher.cpp  sha1_hasher.hpp  sha256_hasher.cpp  sha256_hasher.hpp  singleton.hpp  string.cpp  string.hpp  thread_id.cpp  thread_id.hpp  thread_id_impl.hpp  time.cpp  time.hpp  timed_actions.hpp  timed_event.hpp  timed_events.hpp  types.hpp  url_encode.cpp  url_encode.hpp  variant.hpp  variant_comparison.hpp
(+562 files in other folders)
